# oxretro

./: .gitignore  Cargo.toml  README.md
src/: callbacks.rs  core.rs  core_protocol.rs  ffi.rs  main.rs  retro_types.rs  state.rs
src/audio/: mod.rs
src/audio/cpal/: mod.rs
src/audio/cpal/conversions/: channels.rs  mod.rs  sample.rs  samples_rate.rs
src/audio/rodio/: mod.rs
src/backend/: callbacks.rs  core.rs  mod.rs  protocol.rs  state.rs
src/frontend/: mod.rs  protocol.rs  state.rs
src/graphics/: mod.rs
src/graphics/gl/: mod.rs
src/input/: mod.rs
src/input/gilrs/: mod.rs
src/input/glfw/: mod.rs
