[package]
name = "oxretro"
version = "0.1.0"
authors = ["James <jselby@jselby.net>"]

[dependencies]
libloading = "0.5.0"

glutin = {version = "*", optional = true}
gl = {version = "*", optional = true}
cpal = {version  = "0.8.0", optional = true}
gilrs = {version = "0.6.0", optional = true}

serde = "1.0.33"
serde_derive = "1.0.33"
bincode = "1.0.0"
byteorder = "1"

clap = "2.31.2"

fps_counter = "1.0.0"

[features]
graphics_opengl = ["gl", "glutin"]
audio_cpal = ["cpal"]
input_gilrs = ["gilrs"]
default = ["graphics_opengl", "audio_cpal"]#, "input_gilrs"]
